<resources>
    <string name="app_name">Melody</string>

    <!-- Home Activity -->
    <string name="quoteofDay">"There is hope, even when your brain tells you there isn’t."</string>
    <string name="author">― John Green</string>
    <string name="buttonContinue">Tab to continue</string>

    <!-- Helpline Activity -->
    <string name="helplineTitle"><u>List of Helplines</u></string>

    <string name="title_activity_quotes" translatable="false">Quotes</string>
    <string name="title_activity_Rquotes" translatable="false">Relationship Quotes</string>
    <string name="title_activity_Fquotes" translatable="false">Friendship Quotes</string>
    <string name="title_activity_Lquotes" translatable="false">Life Quotes</string>
    <string name="nameCardEnter">Enter your name:</string>
    <string name="namePlaceholder">name/alias</string>
    <string name="nameCardContinue">Proceed</string>
    <string name="chatBttn">Chat</string>
    <string name="quotesBttn">Quotes</string>
    <string name="musicBttn">Music</string>
    <string name="helplineBttn">Helpline</string>
    <string name="m_card_title1">slowmotion</string>
    <string name="m_card_desc1">Music Card Description 1</string>
    <string name="m_card_title2">november</string>
    <string name="m_card_desc2">Music Card Description 2</string>
    <string name="m_card_title3">adventure</string>
    <string name="m_card_desc3">Music Card Description 3</string>
    <string name="nameCardTheme">Choose Your Color Theme: \nWhich melodies would you sing today?</string>
    <string name="fab_content_desc">+</string>
    <string name="melodyPrimary">Sea</string>
    <string name="melodyPrimary1">Sakura</string>
    <string name="melodyPrimary2">Forest</string>
    <string name="melodyPrimary3">Aqua</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="musicCard_content_description_media1">MC Media 1</string>
    <string name="musicCard_content_description_media2">MC Media 2</string>
    <string name="musicCard_content_description_media3">MC Media 3</string>
</resources>