<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="250dp"
    android:paddingBottom="250dp"
    android:paddingStart="80dp"
    android:paddingEnd="80dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:layout_margin="3dp"
        android:gravity="center"
        app:cardElevation="3dp"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="1dp">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <TextView
                android:id="@+id/EnterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/nameCardEnter"
                android:textSize="25sp"
                tools:ignore="RelativeOverlap" />
            <EditText
                android:id="@+id/NameHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/namePlaceholder"
                android:inputType="text"
                android:layout_below="@id/EnterName"
                android:textSize="18sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/NameHolder"
                android:layout_alignParentEnd="true"
                android:text="@string/nameCardContinue"/>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>