<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pastelsunset"
    >

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/buttonContinue"
        android:visibility="visible"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewQuote"
        android:layout_width="305dp"
        android:layout_height="77dp"
        android:fontFamily="@font/yellowtail"
        android:shadowColor="@color/melodyPrimary"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="100"
        android:text="@string/quoteofDay"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_background"

        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playball"
        android:text="@string/author"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintEnd_toEndOf="@+id/textViewQuote"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuote" />

</androidx.constraintlayout.widget.ConstraintLayout>