<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Music">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/musicCard1"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="auto"
                    android:onClick="PlayBackgroundSound1"
                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#FFFFFF"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="match_parent"
                            android:layout_height="175dp"
                            android:contentDescription="@string/musicCard_content_description_media1"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/slowmotion" />

                        <TextView
                            android:id="@+id/musicCardText1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/m_card_title1"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/m_card_desc1" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/musicCard2"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="auto"
                    android:onClick="PlayBackgroundSound2"
                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#FFFFFF"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="match_parent"
                            android:layout_height="175dp"
                            android:contentDescription="@string/musicCard_content_description_media2"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/november" />

                        <TextView
                            android:id="@+id/musicCardText2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/m_card_title2"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/m_card_desc2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/musicCard3"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="auto"
                    android:onClick="PlayBackgroundSound3"
                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#FFFFFF"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="match_parent"
                            android:layout_height="175dp"
                            android:contentDescription="@string/musicCard_content_description_media3"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/adventure" />

                        <TextView
                            android:id="@+id/musicCardText3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/m_card_title3"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/m_card_desc3" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="auto"
                    android:visibility="invisible"
                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#FFFFFF"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/m_card_title3"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/m_card_desc3" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/music_bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:textSize="12dp"
                        android:onClick="quoteBttnFn"
                        android:text="@string/quotesBttn" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:textSize="12dp"
                        android:onClick="chatBttnFn"
                        android:text="@string/chatBttn" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:textSize="12dp"
                        android:onClick="musicBttnFn"
                        android:text="@string/musicBttn" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:textSize="12dp"
                        android:onClick="helplineBttnFn"
                        android:text="@string/helplineBttn" />
                </TableRow>
            </TableLayout>
        </LinearLayout>-->